# Waecan

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/waecan-cli/: Cargo.toml
crates/waecan-cli/src/: lib.rs
crates/waecan-core/: Cargo.toml
crates/waecan-core/src/: block.rs  block_validation.rs  difficulty.rs  error.rs  lib.rs  pow.rs  transaction.rs  validation.rs
crates/waecan-crypto/: Cargo.toml
crates/waecan-crypto/src/: address.rs  errors.rs  hash.rs  keys.rs  lib.rs  pedersen.rs  ring_sig.rs  stealth.rs
crates/waecan-mempool/: Cargo.toml
crates/waecan-mempool/src/: lib.rs
crates/waecan-miner/: Cargo.toml
crates/waecan-miner/src/: lib.rs
crates/waecan-node/: Cargo.toml
crates/waecan-node/src/: lib.rs
crates/waecan-p2p/: Cargo.toml
crates/waecan-p2p/src/: lib.rs
crates/waecan-rpc/: Cargo.toml
crates/waecan-rpc/src/: lib.rs
crates/waecan-storage/: Cargo.toml
crates/waecan-storage/src/: db.rs  error.rs  lib.rs  record.rs  tests.rs
crates/waecan-wallet/: Cargo.toml
crates/waecan-wallet/src/: lib.rs
crates/waecnan-core/src/: block_validation.rs  genesis.rs  pow.rs  validation.rs
crates/waecnan-crypto/src/: ring_sig.rs
crates/waecnan-miner/: Cargo.toml
crates/waecnan-miner/src/: main.rs
crates/waecnan-p2p/src/: lib.rs
crates/waecnan-wallet/src/: lib.rs
