[workspace]
members = [
  "crates/waecan-crypto",
  "crates/waecan-core",
  "crates/waecan-storage",
  "crates/waecan-mempool",
  "crates/waecan-p2p",
  "crates/waecan-rpc",
  "crates/waecan-miner",
  "crates/waecan-wallet",
  "crates/waecan-node",
  "crates/waecan-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Waecan Protocol"]
license = "MIT"
