[package]
name = "waecan-node"
version.workspace = true
edition.workspace = true

[dependencies]
waecan-core = { path = "../waecan-core" }
waecan-storage = { path = "../waecan-storage" }
waecan-mempool = { path = "../waecan-mempool" }
waecan-miner = { path = "../waecan-miner" }
waecan-p2p = { path = "../waecan-p2p" }
waecan-rpc = { path = "../waecan-rpc" }
waecan-wallet = { path = "../waecan-wallet" }
tokio = { version = "1.38", features = ["full"] }
serde_json = "1"
