[package]
name = "waecan-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
waecan-core = { path = "../waecan-core" }
waecan-crypto = { path = "../waecan-crypto" }
curve25519-dalek = { version = "4.1", features = ["digest"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
